@@ -1,3 +1,8 @@
+2009-11-04 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/gsc/GSGState.m (-setColor:state:): Don't handle alpha specially.
+	* Source/cairo/CairoGState.m: Clean up last change.
+
 2009-11-04 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source\winlib\WIN32GState.m: Fixes for read image.
